@@ -1,3 +1,5 @@
 * As a user I can access accounts from an ENV variable
+* As a user I can load a multisig directly from /assets and execute transactions
+* As a user I can use CLI to run an JS Node REPL with async/await suppport on the top level
 * As a user I can compile and run PyTeal Files
 * As a user I can load ALGOD and KMD credentials from ENV variable
